Add navigation menu and about page

--- a/public/404.html
+++ b/public/404.html
@@ -101,6 +101,36 @@
             </div>
         </div>
         <ul id="menu">
+            <li>
+                <a href="http://localhost:1313/" title="Home | 首頁">
+                    <span>Home | 首頁</span>
+                </a>
+            </li>
+            <li>
+                <a href="http://localhost:1313/posts/" title="Posts | 文章">
+                    <span>Posts | 文章</span>
+                </a>
+            </li>
+            <li>
+                <a href="http://localhost:1313/tags/" title="Tags | 標籤">
+                    <span>Tags | 標籤</span>
+                </a>
+            </li>
+            <li>
+                <a href="http://localhost:1313/categories/" title="Categories | 分類">
+                    <span>Categories | 分類</span>
+                </a>
+            </li>
+            <li>
+                <a href="http://localhost:1313/about/" title="About | 關於這裡">
+                    <span>About | 關於這裡</span>
+                </a>
+            </li>
+            <li>
+                <a href="http://localhost:1313/search/" title="🔍 搜尋">
+                    <span>🔍 搜尋</span>
+                </a>
+            </li>
         </ul>
     </nav>
 </header>
