--- a/public/404.html
+++ b/public/404.html
@@ -10,7 +10,7 @@
 <meta name="description" content="">
 <meta name="author" content="">
 <link rel="canonical" href="http://localhost:1313/404.html">
-<link crossorigin="anonymous" href="/assets/css/stylesheet.31b2957344888d49a9d0e29bf69499948aa727a7ca68a3f4ac2eae5751000a53.css" integrity="sha256-MbKVc0SIjUmp0OKb9pSZlIqnJ6fKaKP0rC6uV1EAClM=" rel="preload stylesheet" as="style">
+<link crossorigin="anonymous" href="/assets/css/stylesheet.cf2018241957576d472abd93263b2fd2ffb4c1c731999ee84ae8ddaa4a47240b.css" integrity="sha256-zyAYJBlXV21HKr2TJjsv0v&#43;0wccxmZ7oSujdqkpHJAs=" rel="preload stylesheet" as="style">
 <link rel="icon" href="http://localhost:1313/favicon.ico">
 <link rel="icon" type="image/png" sizes="16x16" href="http://localhost:1313/favicon-16x16.png">
 <link rel="icon" type="image/png" sizes="32x32" href="http://localhost:1313/favicon-32x32.png">
