--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
 <meta name="theme-color" content="#2e2e33">
 <meta name="msapplication-TileColor" content="#2e2e33">
 <link rel="alternate" type="application/rss+xml" href="http://localhost:1313/index.xml" title="rss">
+<link rel="alternate" type="application/json" href="http://localhost:1313/index.json" title="json">
 <link rel="alternate" hreflang="en" href="http://localhost:1313/">
 <noscript>
     <style>
@@ -129,7 +130,7 @@
                 </a>
             </li>
             <li>
-                <a href="http://localhost:1313/search/" title="🔍 搜尋">
+                <a href="http://localhost:1313/search/" title="🔍 搜尋 (Alt &#43; /)" accesskey=/>
                     <span>🔍 搜尋</span>
                 </a>
             </li>
