Add custom footer with auto year and hide default theme footer

--- a/public/404.html
+++ b/public/404.html
@@ -10,7 +10,7 @@
 <meta name="description" content="">
 <meta name="author" content="">
 <link rel="canonical" href="http://localhost:1313/404.html">
-<link crossorigin="anonymous" href="/assets/css/stylesheet.cf2018241957576d472abd93263b2fd2ffb4c1c731999ee84ae8ddaa4a47240b.css" integrity="sha256-zyAYJBlXV21HKr2TJjsv0v&#43;0wccxmZ7oSujdqkpHJAs=" rel="preload stylesheet" as="style">
+<link crossorigin="anonymous" href="/assets/css/stylesheet.64b482f5e03476ef87fb59d425c0981d5079094d28ef758029c9f3776e545e5f.css" integrity="sha256-ZLSC9eA0du&#43;H&#43;1nUJcCYHVB5CU0o73WAKcnzd25UXl8=" rel="preload stylesheet" as="style">
 <link rel="icon" href="http://localhost:1313/favicon.ico">
 <link rel="icon" type="image/png" sizes="16x16" href="http://localhost:1313/favicon-16x16.png">
 <link rel="icon" type="image/png" sizes="32x32" href="http://localhost:1313/favicon-32x32.png">
@@ -151,7 +151,13 @@
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12 6" fill="currentColor">
         <path d="M12 6H0l6-6z" />
     </svg>
-</a>
+</a><div class="custom-footer">
+    <span>© 2026 Wei-Jen Tseng | Mail/信箱: [contact method TBD] | Powered by 
+        <a href="https://gohugo.io/" rel="noopener noreferrer" target="_blank">Hugo</a> & 
+        <a href="https://github.com/adityatelange/hugo-PaperMod/" rel="noopener" target="_blank">PaperMod</a>
+    </span>
+</div>
+
 
 <script>
     let menu = document.getElementById('menu');
