--- a/public/search/index.html
+++ b/public/search/index.html
@@ -10,7 +10,7 @@
 <meta name="description" content="搜尋 - Wet / Rain">
 <meta name="author" content="">
 <link rel="canonical" href="http://localhost:1313/search/">
-<link crossorigin="anonymous" href="/assets/css/stylesheet.cf2018241957576d472abd93263b2fd2ffb4c1c731999ee84ae8ddaa4a47240b.css" integrity="sha256-zyAYJBlXV21HKr2TJjsv0v&#43;0wccxmZ7oSujdqkpHJAs=" rel="preload stylesheet" as="style"><link crossorigin="anonymous" rel="preload" as="fetch" href="../index.json">
+<link crossorigin="anonymous" href="/assets/css/stylesheet.64b482f5e03476ef87fb59d425c0981d5079094d28ef758029c9f3776e545e5f.css" integrity="sha256-ZLSC9eA0du&#43;H&#43;1nUJcCYHVB5CU0o73WAKcnzd25UXl8=" rel="preload stylesheet" as="style"><link crossorigin="anonymous" rel="preload" as="fetch" href="../index.json">
 <script defer crossorigin="anonymous" src="/assets/js/search.2826037ddab446009aa4dc907d6f13e5fe42eaff23f43abcba31285b991e9c6d.js" integrity="sha256-KCYDfdq0RgCapNyQfW8T5f5C6v8j9Dq8ujEoW5kenG0="></script>
 <link rel="icon" href="http://localhost:1313/favicon.ico">
 <link rel="icon" type="image/png" sizes="16x16" href="http://localhost:1313/favicon-16x16.png">
@@ -167,7 +167,13 @@
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12 6" fill="currentColor">
         <path d="M12 6H0l6-6z" />
     </svg>
-</a>
+</a><div class="custom-footer">
+    <span>© 2026 Wei-Jen Tseng | Mail/信箱: [contact method TBD] | Powered by 
+        <a href="https://gohugo.io/" rel="noopener noreferrer" target="_blank">Hugo</a> & 
+        <a href="https://github.com/adityatelange/hugo-PaperMod/" rel="noopener" target="_blank">PaperMod</a>
+    </span>
+</div>
+
 
 <script>
     let menu = document.getElementById('menu');
