Add GoatCounter analytics

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -71,6 +71,9 @@
     }
 
 </script>
+<script data-goatcounter="https://weiren.goatcounter.com/count"
+        async src="//gc.zgo.at/count.js"></script>
+
 </head>
 <body id="top">
     <header class="header">
