--- a/public/index.html
+++ b/public/index.html
@@ -74,6 +74,9 @@
     }
 
 </script>
+<script data-goatcounter="https://weiren.goatcounter.com/count"
+        async src="//gc.zgo.at/count.js"></script>
+
 </head>
 <body class="list" id="top">
     <header class="header">
